--- a/pong-clientside/index.html
+++ b/pong-clientside/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Pong</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
 
     <script src="clientwebsocket.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
 <!-- DONE: Arduino connection, Socket server setup with client connection, Message from server to client when button is pushed -->
