--- a/pong-clientside/index.html
+++ b/pong-clientside/index.html
@@ -6,7 +6,11 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-
+    <div class="score-board">
+      <p>Score</p>
+      <p><span class="player-one">0</span> - <span class="player-two">0</span></p>
+    </div>
+    <div class="winner"><p></p></div>
     <script src="clientwebsocket.js"></script>
     <script src="index.js"></script>
   </body>
