--- a/pong-clientside/index.html
+++ b/pong-clientside/index.html
@@ -10,7 +10,10 @@
       <p>Score</p>
       <p><span class="player-one">0</span> - <span class="player-two">0</span></p>
     </div>
-    <div class="winner"><p></p></div>
+    <div class="start show">
+      <p>Press spacebar to begin to play. The first one to 5 wins.</p>
+    </div>
+    <div class="winner"><p></p><button class="restart">restart</button></div>
     <script src="clientwebsocket.js"></script>
     <script src="index.js"></script>
   </body>
