--- a/pong-clientside/index.html
+++ b/pong-clientside/index.html
@@ -11,7 +11,8 @@
       <p><span class="player-one">0</span> - <span class="player-two">0</span></p>
     </div>
     <div class="start show">
-      <p>Press spacebar to begin to play. The first one to 5 wins.</p>
+      <p>Press space to start game</p>
+      <p>First player to reach 5 wins!</p>
     </div>
     <div class="winner"><p></p><button class="restart">restart</button></div>
     <script src="clientwebsocket.js"></script>
