Changed colors and sizes

--- a/pong-clientside/index.html
+++ b/pong-clientside/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="score-board">
+    <!-- <div class="score-board">
       <p>Score</p>
       <p><span class="player-one">0</span> - <span class="player-two">0</span></p>
     </div>
@@ -14,7 +14,7 @@
       <p>Press space to start game</p>
       <p>First player to reach 5 wins!</p>
     </div>
-    <div class="winner"><p></p><button class="restart">restart</button></div>
+    <div class="winner"><p></p><button class="restart">restart</button></div> -->
     <script src="clientwebsocket.js"></script>
     <script src="index.js"></script>
   </body>
