--- a/pong-clientside/index.html
+++ b/pong-clientside/index.html
@@ -2,10 +2,26 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Pong</title>
+    <title>Ping-Pong Game</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+
+    <div class="seperator"></div>
+    <div id="canvas-wrap">
+
+      <div class="overlay"></div>
+    </div>
+
+    <!-- <div class="score-board">
+      <div class="player-one">
+        <span class="player-one">0</span>
+      </div>
+      <div class="player-one">
+        <span class="player-two">0</span>
+      </div>
+    </div> -->
+
     <!-- <div class="score-board">
       <p>Score</p>
       <p><span class="player-one">0</span> - <span class="player-two">0</span></p>
