--- a/pong-clientside/index.html
+++ b/pong-clientside/index.html
@@ -7,10 +7,16 @@
   </head>
   <body>
 
-    <div class="seperator"></div>
+    <!-- <div class="seperator"></div> -->
     <div id="canvas-wrap">
-
-      <div class="overlay"></div>
+      <div class="overlay">
+        <div class="player-one-score">
+          <h2 class="player-one">4</h2>
+        </div>
+        <div class="player-two-score">
+          <h2 class="player-tow">7</h2>
+        </div>
+      </div>
     </div>
 
     <!-- <div class="score-board">
