--- a/pong-clientside/index.html
+++ b/pong-clientside/index.html
@@ -13,6 +13,7 @@
         <div class="player-one-score">
           <h2 class="player-one">4</h2>
         </div>
+        <div class="seperator"></div>
         <div class="player-two-score">
           <h2 class="player-tow">7</h2>
         </div>
