Included start on spage

--- a/pong-clientside/index.html
+++ b/pong-clientside/index.html
@@ -11,11 +11,11 @@
     <div id="canvas-wrap">
       <div class="overlay">
         <div class="player-one-score">
-          <h2 class="player-one">4</h2>
+          <h2 class="player-one">0</h2>
         </div>
         <div class="seperator"></div>
         <div class="player-two-score">
-          <h2 class="player-tow">7</h2>
+          <h2 class="player-tow">0</h2>
         </div>
       </div>
     </div>
@@ -32,12 +32,10 @@
     <!-- <div class="score-board">
       <p>Score</p>
       <p><span class="player-one">0</span> - <span class="player-two">0</span></p>
-    </div>
-    <div class="start show">
-      <p>Press space to start game</p>
-      <p>First player to reach 5 wins!</p>
-    </div>
-    <div class="winner"><p></p><button class="restart">restart</button></div> -->
+    </div>-->
+
+    <div class="start show"></div>
+    <div class="winner"><p></p><button class="restart"></button></div>
     <script src="clientwebsocket.js"></script>
     <script src="index.js"></script>
   </body>
