--- a/pong-clientside/index.html
+++ b/pong-clientside/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="seperator"></div>
         <div class="player-two-score">
-          <h2 class="player-tow">0</h2>
+          <h2 class="player-two">0</h2>
         </div>
       </div>
     </div>
@@ -34,8 +34,8 @@
       <p><span class="player-one">0</span> - <span class="player-two">0</span></p>
     </div>-->
 
-    <div class="start show"></div>
-    <div class="winner"><p></p><button class="restart"></button></div>
+    <div class="start show">Start game by pressing space</div>
+    <div class="winner"><p></p><button class="restart">Restart</button></div>
     <script src="clientwebsocket.js"></script>
     <script src="index.js"></script>
   </body>
