--- a/pong-clientside/index.html
+++ b/pong-clientside/index.html
@@ -13,7 +13,7 @@
         <div class="player-one-score">
           <h2 class="player-one">0</h2>
         </div>
-        <div class="seperator"></div>
+        <div class="ball-button"></div>
         <div class="player-two-score">
           <h2 class="player-two">0</h2>
         </div>
