Changed canvas so there isnt white space around

--- a/pong-clientside/index.html
+++ b/pong-clientside/index.html
@@ -35,7 +35,7 @@
       <p><span class="player-one">0</span> - <span class="player-two">0</span></p>
     </div>-->
 
-    <div class="start show">Start game by pressing space. First to score 3 times</div>
+    <div class="start"></div>
     <div class="winner"><p></p><button class="restart">Restart</button></div>
     <script src="clientwebsocket.js"></script>
     <script src="index.js"></script>
