Changed canvas and added new structure

--- a/pong-clientside/index.html
+++ b/pong-clientside/index.html
@@ -7,7 +7,18 @@
   </head>
   <body>
 
+  <div class="players">
+    <div class="player-one-score">
+      <h2 class="player-one">0</h2>
+    </div>
+    <div class="player-two-score">
+      <h2 class="player-two">0</h2>
+    </div>
+  </div>
+
+
     <!-- <div class="seperator"></div> -->
+
     <div id="canvas-wrap">
       <div class="overlay">
         <div class="player-one-score">
