--- a/pong-clientside/index.html
+++ b/pong-clientside/index.html
@@ -21,7 +21,7 @@
     <div class="ball-button"></div>
   </div>
 
-    <div class="start"></div>
+    <div class="start show"><p>Press the ball to start the game.<br /> First to three wins.</p></div>
     <div class="winner"><p></p><button class="restart">Restart</button></div>
     <script src="clientwebsocket.js"></script>
     <script src="index.js"></script>
